--- a/appsettings.json
+++ b/appsettings.json
@@ -248,6 +248,11 @@
                 "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -491,6 +496,11 @@
                 "FromId": "AFE63956-3M5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3M5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -537,6 +547,11 @@
                 "FromId": "AFE63956-3M5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3M5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -733,6 +748,11 @@
                 "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -779,6 +799,11 @@
                 "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -974,6 +999,11 @@
                 "FromId": "AFE63956-3O5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3O5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1020,6 +1050,11 @@
                 "FromId": "AFE63956-3O5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3O5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1217,6 +1252,11 @@
                 "FromId": "AFE63956-3P5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3P5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1263,6 +1303,11 @@
                 "FromId": "AFE63956-3P5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3P5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1460,6 +1505,11 @@
                 "FromId": "AFE63956-3Q5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1647,6 +1697,11 @@
                 "FromId": "AFE63956-3Q5E-4GGF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4GGF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1693,6 +1748,11 @@
                 "FromId": "AFE63956-3Q5E-4GGF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4GGF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1890,6 +1950,11 @@
                 "FromId": "AFE63956-3Q5E-4HHF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4HHF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -1936,6 +2001,11 @@
                 "FromId": "AFE63956-3Q5E-4HHF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4HHF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2133,6 +2203,11 @@
                 "FromId": "AFE63956-3Q5E-4IIF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4IIF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2179,6 +2254,11 @@
                 "FromId": "AFE63956-3Q5E-4IIF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4IIF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2376,6 +2456,11 @@
                 "FromId": "AFE63956-3Q5E-4JJF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4JJF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2422,6 +2507,11 @@
                 "FromId": "AFE63956-3Q5E-4JJF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4JJF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2620,6 +2710,11 @@
                 "FromId": "AFE63956-3Q5E-4MMF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4MMF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2666,6 +2761,11 @@
                 "FromId": "AFE63956-3Q5E-4MMF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4MMF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
@@ -2864,6 +2964,11 @@
                 "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
               }
             ]
           },
