--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Repository": "",
+  "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Parameters": {
     "Host": "https://xb5quffgivc2be2orpeepnwgse0bhpxf.lambda-url.eu-north-1.on.aws/",
