--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,8 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Parameters": {
-    "Host1": "https://xb5quffgivc2be2orpeepnwgse0bhpxf.lambda-url.eu-north-1.on.aws/",
-    "Host": "http://localhost",
-    "Port": 5084
+    "Host": "https://zxzw6stelkr2o2jemu2zwy4hiy0acdkq.lambda-url.eu-north-1.on.aws",
+    "Port": null
   },
   "WizardInfrastrutture": {
     "Menu": {
