--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,9 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Parameters": {
-    "Host": "https://zxzw6stelkr2o2jemu2zwy4hiy0acdkq.lambda-url.eu-north-1.on.aws",
-    "Port": null
+    "Host1": "https://zxzw6stelkr2o2jemu2zwy4hiy0acdkq.lambda-url.eu-north-1.on.aws",
+    "Host": "http://localhost",
+    "Port": 5084
   },
   "WizardInfrastrutture": {
     "Menu": {
