--- a/appsettings.json
+++ b/appsettings.json
@@ -45,7 +45,7 @@
               "Description": "Fornitore DsSmith Francia",
               "FormId": "AFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
               "Sigla": "DSF",
-              "BarcodeLength": 14,
+              "BarcodeLength": 8,
               "Icon": "People"
             },
             {
@@ -4231,6 +4231,199 @@
               },
               {
                 "FromId": "D9CE9583-3CE8-4E87-99E5-224371B12F8E",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
+              }
+            ]
+          }
+
+
+        ]
+
+
+      },
+      {
+        "Id": "AFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+        "Title": "Maschera di Lettura Barcode",
+        "Components": [
+          {
+            "Id": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "TipoDistintaComponent",
+            "Title": "Tipo Distinta di Carico",
+            "Description": "Tipo Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "FornitoreId",
+                "Value": "DSF"
+              },
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ]
+          },
+          {
+            "Id": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "DistintaCaricoComponent",
+            "Title": "Distinta di Carico",
+            "Description": "Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "FornitoreId",
+                "ToProperty": "FornitoreId"
+              },
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
+              },
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
+              }
+            ]
+          },
+          {
+            "Id": "DFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "CartellinoComponent",
+            "Title": "Foto Cartellino",
+            "Description": "Esempio di cartellino",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Foto",
+                "Value": "./cartellinoimages/no-foto.jpg"
+              },
+              {
+                "Name": "Istruzioni",
+                "Value": "Leggere etichetta evidenziata come numero 1"
+              }
+            ]
+          },
+          {
+            "Id": "EFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "BarcodeComponent",
+            "Title": "Lettura Primo Barcode",
+            "Description": "Maschera di gestione Barcode",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
+                "Name": "Immediate",
+                "Value": false
+              },
+              {
+                "Name": "InputMaxCharacters",
+                "Value": 50
+              },
+              {
+                "Name": "BarcodeLength",
+                "Value": 8
+              },
+              {
+                "Name": "HelperText",
+                "Value": "In caso di inserimento manuale confermare con Enter"
+              },
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              },
+              {
+                "Name": "DebounceInterval",
+                "Value": 0
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "IsCamera",
+                "ToProperty": "IsCamera"
+              },
+              {
+                "FromId": "BFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "IsBarcodeReader",
+                "ToProperty": "IsBarcodeReader"
+              }
+            ]
+          },
+          {
+            "Id": "FFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "RiepilogoComponent",
+            "Title": "Riepilogo",
+            "Description": "Salvataggio Cartellino",
+            "Defaults": [],
+            "ComponentParameters": [],
+            "DtoParameters": [
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "TipoDistinta",
+                "ToProperty": "TipoDistinta"
+              },
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "FornitoreId",
+                "ToProperty": "FornitoreId"
+              },
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
+              },
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
+              },
+              {
+                "FromId": "CFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
+              {
+                "FromId": "EFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+                "FromProperty": "Barcode",
+                "ToProperty": "PrimoBarcode"
+              },
+              {
+                "FromId": "EFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
                 "FromProperty": "Type",
                 "ToProperty": "PrimoBarcodeType"
               }
