--- a/appsettings.json
+++ b/appsettings.json
@@ -33,7 +33,7 @@
                   "FormId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
                   "Sigla": "DSI",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleAlt"
+                  "Icon": "NaturePeople"
                 },
                 {
                   "Name": "(DSV) Fornitore DsSmith Viana",
@@ -65,7 +65,7 @@
                   "FormId": "11AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
                   "Sigla": "MO",
                   "BarcodeLength": 18,
-                  "Icon": "PeopleOutline"
+                  "Icon": "EmojiPeople"
                 },
                 {
                   "Name": "(WRA) Fornitore WestRock",
@@ -73,7 +73,7 @@
                   "FormId": "12AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
                   "Sigla": "WRA",
                   "BarcodeLength": 13,
-                  "Icon": "PeopleOutline"
+                  "Icon": "Person3"
                 },
                 {
                   "Name": "(CA) Fornitore Cardella",
@@ -81,7 +81,7 @@
                   "FormId": "13AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
                   "Sigla": "CA",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleOutline"
+                  "Icon": "Person4"
                 },
                 {
                   "Name": "(PCA) Fornitore PCA",
@@ -89,7 +89,7 @@
                   "FormId": "14AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
                   "Sigla": "PCA",
                   "BarcodeLength": 20,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PersonAdd"
                 },
                 {
                   "Name": "(BK) Fornitore BlueKart",
@@ -97,7 +97,7 @@
                   "FormId": "14AD27C7-D3AB-4FFD-A238-F59D9FE481B0",
                   "Sigla": "BK",
                   "BarcodeLength": 0,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PersonAddAlt"
                 },
                 {
                   "Name": "(PP) Fornitore Papel Prensa",
@@ -105,7 +105,7 @@
                   "FormId": "14AD27C7-D3AB-4FFD-A238-F59D9FE481C0",
                   "Sigla": "PP",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleOutline"
+                  "Icon": "Person"
                 },
                 {
                   "Name": "(TP) Fornitore Toscopaper",
@@ -113,7 +113,7 @@
                   "FormId": "14AD27C7-D3AB-4GGD-A238-F59D9FE481A0",
                   "Sigla": "TP",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleOutline"
+                  "Icon": "Person2"
                 },
                 {
                   "Name": "(CG) Fornitore Cartiera Giorgione",
@@ -121,7 +121,7 @@
                   "FormId": "14AD27C7-D3AB-4HHD-A238-F59D9FE481A0",
                   "Sigla": "CG",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PersonOutline"
                 },
                 {
                   "Name": "(LP) Fornitore Leipa",
@@ -137,7 +137,7 @@
                   "FormId": "14AD27C7-D3AB-4JJD-A238-F59D9FE481A0",
                   "Sigla": "ST",
                   "BarcodeLength": 14,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PersonSearch"
                 },
                 {
                   "Name": "(GEP) Fornitore Globulus Packaging",
@@ -145,15 +145,15 @@
                   "FormId": "14AD27C7-D3AB-4MMD-A238-F59D9FE481A0",
                   "Sigla": "GEP",
                   "BarcodeLength": 28,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PersonRemove"
                 },
                 {
                   "Name": "(ND) ND Paper",
                   "Description": "ND Paper",
                   "FormId": "14AD27C7-D3AB-4NND-A238-F59D9FE481A0",
                   "Sigla": "ND",
-                  "BarcodeLength": 13,
-                  "Icon": "PeopleOutline"
+                  "BarcodeLength": 10,
+                  "Icon": "SpeakerGroup"
                 },
                 {
                   "Name": "(TL) Tolentino",
@@ -169,7 +169,7 @@
                   "FormId": "94AD27C7-D3AB-4NND-A238-F59D9FE481B9",
                   "Sigla": "PBA",
                   "BarcodeLength": 15,
-                  "Icon": "PeopleOutline"
+                  "Icon": "PestControl"
                 },
                 {
                   "Name": "(BL) Billerud",
@@ -177,6 +177,14 @@
                   "FormId": "3257318D-A1C1-45BC-BABA-3B79409F086A",
                   "Sigla": "BL",
                   "BarcodeLength": 14,
+                  "Icon": "RepeatOneOn"
+                },
+                {
+                  "Name": "(XX) Cartiera Non Codificata",
+                  "Description": "Cartiera Non Codificata",
+                  "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
+                  "Sigla": "XX",
+                  "BarcodeLength": 0,
                   "Icon": "PeopleOutline"
                 },
                 {
@@ -3747,7 +3755,7 @@
                   },
                   {
                     "Name": "BarcodeLength",
-                    "Value": 13
+                    "Value": 10
                   },
                   {
                     "Name": "RegexExpression",
