--- a/appsettings.json
+++ b/appsettings.json
@@ -76,6 +76,14 @@
                   "Icon": "Person3"
                 },
                 {
+                  "Name": "(WRC) Fornitore WestRock Tuque",
+                  "Description": "Fornitore WestRock Canada",
+                  "FormId": "3397318D-A1C1-45BC-BABW-3B79409F086A",
+                  "Sigla": "WRC",
+                  "BarcodeLength": 12,
+                  "Icon": "RepeatOneOn"
+                },
+                {
                   "Name": "(CA) Fornitore Cardella",
                   "Description": "Fornitore Cardella",
                   "FormId": "13AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
@@ -180,12 +188,12 @@
                   "Icon": "RepeatOneOn"
                 },
                 {
-                  "Name": "(XX) Cartiera Non Codificata",
-                  "Description": "Cartiera Non Codificata",
-                  "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
-                  "Sigla": "XX",
-                  "BarcodeLength": 0,
-                  "Icon": "PeopleOutline"
+                  "Name": "(GD) Reno dei Medici",
+                  "Description": "Reno dei Medici",
+                  "FormId": "3397318D-A1C1-45BC-BABA-3B79409F086A",
+                  "Sigla": "GD",
+                  "BarcodeLength": 5,
+                  "Icon": "RepeatOneOn"
                 },
                 {
                   "Name": "(XX) Cartiera Non Codificata",
@@ -1686,6 +1694,192 @@
             ]
 
 
+          },
+          {
+            "Id": "3397318D-A1C1-45BC-BABW-3B79409F086A",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "WCC"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "CFE63956-3F5E-4ECH-91A6-C4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/no-foto.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1 ed etichetta come  numero 2"
+                  }
+                ]
+              },
+              {
+                "Id": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "Lettura Primo Barcode",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 14
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341B7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341B7",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "EFE63951-3F5E-4ECF-91A6-D4B2E52341B5",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+
+                    "FromId": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+
+                    "FromId": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  }
+                ]
+              }
+            ]
           },
           {
             "Id": "13AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
@@ -4959,6 +5153,192 @@
             ]
 
 
+          },
+          {
+            "Id": "3397318D-A1C1-45BC-BABA-3B79409F086A",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "GD"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "CFE63956-3F5E-4ECH-91A6-C4B2E52341B7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/no-foto.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1 ed etichetta come  numero 2"
+                  }
+                ]
+              },
+              {
+                "Id": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "Lettura Primo Barcode",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 5
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341B7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341B7",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "EFE63951-3F5E-4ECF-91A6-D4B2E52341B5",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+
+                    "FromId": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+
+                    "FromId": "DFE63957-3F5E-4ECF-91A5-C4B2E5B341B8",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  }
+                ]
+              }
+            ]
           }
 
 
